--- a/PersonalPortfolio.html
+++ b/PersonalPortfolio.html
@@ -94,7 +94,7 @@
     </div>
     <div id="message">
         <h2 style="color: black;text-align: center;">My Message</h2>
-        <p>I actually live in Papua New Guinea. I went to Italy and the Vatican City. My favourite country is San Marino</p>
+        <p>I went to Italy and the Vatican City. My favourite country is San Marino</p>
     </div>
 </body>
 </html>
